fix- navbar transition using a drop-shadow as the z-index layering would not work in this instance. add- tested link for about page to be directed using navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ body {
   padding: 25px;
   width: 100%;
   top: 0;
+  z-index: 1;
 }
 
 .page-break {
@@ -41,6 +42,13 @@ body {
   padding: 25px;
   height: 250px;
   width: 100%;
+  z-index: -10;
+}
+
+/* position */
+
+.relative {
+  position: relative;
   z-index: -10;
 }
 
@@ -115,6 +123,11 @@ nav .nav-item {
   font-size: 1.2em;
   font-weight: 500;
   transition: all .2s;
+}
+
+span a {
+  text-decoration: none;
+  color: slategray;
 }
 
 .btn .active-text {
@@ -215,6 +228,10 @@ div h4::before {
   z-index: 0;
 }
 
+.drop-shadow {
+  box-shadow: 5px 100px #42526e;
+}
+
 .blur-box {
   width: 65vw;
   height: 300px;
@@ -303,9 +320,8 @@ button:hover {
   height: 150px;
   width: 150px;
   background: #6374F2;
-  z-index: -1;
+  z-index: 1;
   bottom: 40px;
-
 }
 
 .chevron::before {
@@ -316,7 +332,6 @@ button:hover {
 
 .chevron::after {
   transform: skew(0, -20deg);
-
 }
 
 /* page break */
@@ -402,7 +417,7 @@ div p {
 /* page-break shape */
 .diagonal {
   position: relative;
-  z-index: -10;
+  z-index: 1;
   padding: 25px;
   height: 250px;
   width: 100%;
@@ -415,7 +430,7 @@ div p {
   width: 75vw;
   position: relative;
   top: -150px;
-  z-index: -10;
+  z-index: 2;
 }
 
 /* Team Page */
